# RhythmMilk

./: .gitignore  CMakeLists.txt  CMakeSettings.json  MakeBuildFiles.bat  README.md
Client/: Application.cpp  Application.hpp  CMakeLists.txt  Main.cpp  Renderer.cpp  Renderer.hpp  main.cpp
Metronome/: CMakeLists.txt  Main.cpp
RhythmEngine/: CMakeLists.txt  RhythmMath.cpp  RhythmMath.hpp
RhythmEngine/Renderer/: PlatformRenderer.hpp
